# DPCG-OPEN

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
abaqus_model/frame33-9000/master/: Job-frame33-9000.inp  Job-frame33-9000_LOAD2.mtx  Job-frame33-9000_STIF2.mtx
abaqus_model/frame99-7500/master/: Job-frame99-7500.inp  Job-frame99-7500_LOAD2.mtx  Job-frame99-7500_STIF2.mtx
abaqus_model/station-10000/master/: Job-station-1w.inp  Job-station-1w_LOAD2.mtx
configs/benchmark/: benchmark_petsc_gpu_sunet_vs_amg.yaml
configs/dataset/: abaqus_case_library_build.yaml  abaqus_case_library_convert.yaml  abaqus_case_library_rules.yaml  abaqus_case_library_validate.yaml
configs/train/: train_sunet0_tail_default.yaml
scripts/: build_abaqus_case_library.py  build_petsc_learning_native.sh  convert_abaqus_case_library.py  use_petsc_hypre.sh  validate_abaqus_case_library.py
src/dpcg/: __init__.py  benchmark.py  cli_config.py  data.py  losses.py  models.py  petsc_benchmark.py  sample.py  train.py  utils.py
src/dpcg/_native/: petsc_learning_transformed_mat.c
src/dpcg/abaqus/: __init__.py  cli.py
src/dpcg/io/: __init__.py  abaqus.py  abaqus_case_library.py  abaqus_case_library_rules.yaml  abaqus_dat.py  npz.py
tests/: helpers.py  test_build_petsc_learning_native.py  test_dataset.py  test_losses.py  test_train_smoke.py
